uptime-kuma/uptime-kuma-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime
  namespace: uptime
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptime.test.com`)
      kind: Rule
      services:
        - name: uptime
          port: 3001
